--- a/wp-content/themes/caseslegit/sass/layout/singlepost.scss
+++ b/wp-content/themes/caseslegit/sass/layout/singlepost.scss
@@ -11,12 +11,24 @@ Author     : joe.cooper
 .entry-header-single {
   margin: 0;
   padding: 1px 0 0 0;
-  flex: 1 100%;
-  display: block;
+  flex: 1 1 100%;
+  display: flex;
+  flex-flow: column nowrap;
   h1 {
+    padding: 0 30px;
     display: block;
     color: $color1;
+    flex: 1 1 100%;
   }
+}
+.entry-title {
+  max-width: 1200px;
+}
+.entry-meta {
+  font-family: akzMed;
+  font-size: 1.0rem;
+  margin: 0 0 20px 0;
+  max-width: 1200px;
 }
 
 .entry-content-single {
@@ -80,12 +92,6 @@ Author     : joe.cooper
   }
 }
 
-.entry-meta {
-  font-family: akzMed;
-  font-size: 1.0rem;
-  margin: 0 0 20px 0;
-}
-
 .article-whole {
   padding: 0;
   display: flex;
@@ -96,9 +102,12 @@ Author     : joe.cooper
 }
 
 .article-container {
-  flex: 5 0 auto;
-  max-width: 700px;
+  flex: 1 1 720px;
+  width: 100%;
+  max-width: 720px;
+  padding: 0 10px;
   margin: 0 auto;
+
 }
 
 article {
@@ -179,14 +188,13 @@ aside {
   content: url(images/lilsq.svg);
   display: inline-block;
   width: 12px;
-  margin: 0 10px 0 20px;
+  margin: 0 10px 0 40px;
 }
 
-@media all and (max-width: 900px) {
+/* @media all and (max-width: 900px) {
   .article-whole {
-    flex-flow: column wrap;
   }
-}
+} */
 
 @media all and (max-width: 710px) {
   .entry-header-single {
